--- a/projeto/src/main/resources/static/login.css
+++ b/projeto/src/main/resources/static/login.css
@@ -72,3 +72,15 @@ hr.my-4 {
 h2.fs-5.fw-bold.mb-3 {
     margin-bottom: 20px;
 }
+
+#forgot-password-link {
+    display: block;
+    margin-top: 5px;
+    font-size: 0.9em;
+    color: #007bff;
+    text-decoration: none;
+}
+
+#forgot-password-link:hover {
+    text-decoration: underline;
+}
