--- a/projeto/src/main/resources/static/produtos.css
+++ b/projeto/src/main/resources/static/produtos.css
@@ -64,7 +64,7 @@
 
 /* Cor e estilo para o botão de adicionar ao carrinho */
 .button-add-to-cart {
-    background-color: #28a745; /* Verde */
+    background-color: #286ab0; /*azul*/
 }
 
 .button-add-to-cart:hover {
